proj1/tests/other-tests/oskis-angels_tests/error/function_mismatched_parens.py
def f()):
    return 56
